--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "nodemon": "^3.0.3"
   },
   "dependencies": {
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "redis": "^4.6.13"
   },
   "private": "true"
 }
